segunda prueba de distinto html

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
             <ul>
                 <li><a href="Electronica.html">Electrónica</a></li>                    
                 <li><a href="Electricidad.html">Electricidad</a></li>
-                <li><a href="#telecomunicaciones">Telecomunicaciones</a></li>
-                <li><a href="#fotovoltaica">Fotovoltaica</a></li>
-                <li><a href="#programacion">Programación</a></li>
-                <li><a href="#domotica">Domótica</a></li>
+                <li><a href="Telecomunicaciones.html">Telecomunicaciones</a></li>
+                <li><a href="Fotovoltaica.html">Fotovoltaica</a></li>
+                <li><a href="Programacion.html">Programación</a></li>
+                <li><a href="Domotica.html">Domótica</a></li>
                 <li><a href="#fotos proyectos">Fotos Proyectos</a></li>
                 <li><a href="#videos proyectos">Videos Proyectos</a></li>
             </ul>
