--- a/Electricidad.html
+++ b/Electricidad.html
@@ -1,7 +1,7 @@
 <html></html>
     <head>
         <title>JCPELECTRIK</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="/css/style.css">
         <link rel="shortcut icon" href="Logos\favicon.ico" type="image/x-icon">
         <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
     </head>
