--- a/Electronica.html
+++ b/Electronica.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>JCPELECTRIK</title>
-        <link rel="stylesheet" href="/css/style.css">
+        <link rel="stylesheet" href="style.css">
         <link rel="shortcut icon" href="Logos\favicon.ico" type="image/x-icon">
         <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
     </head>
@@ -17,8 +17,7 @@
                     <li><a href="Fotovoltaica.html">Fotovoltaica</a></li>
                     <li><a href="Programacion.html">Programación</a></li>
                     <li><a href="Domotica.html">Domótica</a></li>
-                    <li><a href="#fotos proyectos">Fotos Proyectos</a></li>
-                    <li><a href="#videos proyectos">Videos Proyectos</a></li>
+
                 </ul>
             </nav>
         </header>
@@ -48,6 +47,7 @@
                 <div class="columnastipo">
                     <h3>Prosimo proyecto</h3>
                     <p></p>
+                </div>
             </div>
         </main>
     </body>
