--- a/Fotovoltaica.html
+++ b/Fotovoltaica.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>JCPELECTRIK</title>
-        <link rel="stylesheet" href="/css/style.css">
+        <link rel="stylesheet" href="style.css">
         <link rel="shortcut icon" href="Logos\favicon.ico" type="image/x-icon">
         <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
     </head>
@@ -17,8 +17,6 @@
                     <li><a href="Telecomunicaciones.html">Telecomunicaciones</a></li>
                     <li><a href="Programacion.html">Programación</a></li>
                     <li><a href="Domotica.html">Domótica</a></li>
-                    <li><a href="#fotos proyectos">Fotos Proyectos</a></li>
-                    <li><a href="#videos proyectos">Videos Proyectos</a></li>
                 </ul>
             </nav>
         </header>
