--- a/Domotica.html
+++ b/Domotica.html
@@ -17,13 +17,11 @@
                     <li><a href="Telecomunicaciones.html">Telecomunicaciones</a></li>
                     <li><a href="Fotovoltaica.html">Fotovoltaica</a></li>
                     <li><a href="Programacion.html">Programación</a></li>
-                    <li><a href="#fotos proyectos">Fotos Proyectos</a></li>
-                    <li><a href="#videos proyectos">Videos Proyectos</a></li>
                 </ul>
             </nav>
         </header>
         <main>
-            <div class="cabecera" id="domotica">
+            <div class="cabecera">
                 <h2>Domotica</h2>
                 <p>Aqui se pondran todos los proyectos y documentacion relacionada a la Domotica</p>
             </div>
