lla funcionan las diferentes paginas

--- a/Electricidad.html
+++ b/Electricidad.html
@@ -1,5 +1,6 @@
 <html></html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>JCPELECTRIK</title>
         <link rel="stylesheet" href="style.css">
         <link rel="shortcut icon" href="Logos\favicon.ico" type="image/x-icon">
@@ -74,6 +75,22 @@
                     <p><li><a href="#proyecto motor">proyecto motor</a></li></p>
                 </div>
             </div>
+            <div class="cabecera" id="videos proyectos">
+                <h2>Videos proyectos</h2>
+                <p>En esta sección encontrarás todos los videos de los proyectos</p>
+                <div class="columnas">
+                        <div class="proyecto" id="proyecto motor">
+                            <video controls>
+                                <source src="videos\WhatsApp Video 2024-09-26 at 11.06.34.mp4" type="video/mp4">
+                                Tu navegador no soporta la reproducción de videos.
+                            </video>
+                            <h3>El motor mas pequeño del mundo</h3>
+                            <p></p>
+                        </div> 
         </main>
+        <footer>
+            <p>Copyright &copy; 2023 <span>JCP ELECTRIK </span>All rights reserved.</p>
+            
+        </footer>
     </body>
 </html>
