--- a/Fotovoltaica.html
+++ b/Fotovoltaica.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>JCPELECTRIK</title>
         <link rel="stylesheet" href="style.css">
         <link rel="shortcut icon" href="Logos\favicon.ico" type="image/x-icon">
@@ -62,5 +63,8 @@
                     </div>
                 </div> 
         </main>
+        <footer>
+            <p>Copyright &copy; 2023 <span>JCP ELECTRIK </span>All rights reserved.</p>
+    </footer>
     </body>
 </html>
