--- a/Telecomunicaciones.html
+++ b/Telecomunicaciones.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>JCPELECTRIK</title>
         <link rel="stylesheet" href="style.css">
         <link rel="shortcut icon" href="Logos\favicon.ico" type="image/x-icon">
@@ -52,7 +53,19 @@
                     <h3>Proyectos Telecomunicaciones</h3>
                 </div>
             </div>
+            <div class="cabecera">
+                <h2>Fotos Proyectos</h2>
+                <p>En esta sección encontrarás todos las fotos de los proyectos</p>
+            </div>
+            <div class="proyecto">
+                <img src="fotos\ethcable568b.gif" alt="Cocigo de colores RJ45">
+                <h3>Cocigo de colores RJ45</h3>
+            </div>
         </div>
         </main>
+        <footer>
+            <p>Copyright &copy; 2023 <span>JCP ELECTRIK </span>All rights reserved.</p>
+            
+        </footer>
     </body>
 </html>
