Formas de contactarme

--- a/index.html
+++ b/index.html
@@ -36,9 +36,11 @@
         </div>
         <div class="cabecera">
             <h2>A que me dedico</h2>
-            <p>Soy electricista y dedico mi tiempo libre a la programación de microcontroladores como Arduino y ESP32 para domotizar y automatizar mi hogar y otras propiedades.
-                Mi correo es jcpelectrik@gmail.com
-            </p>
+            <p>Soy electricista y dedico mi tiempo libre a la programación de microcontroladores como Arduino y ESP32 para domotizar y automatizar mi hogar y otras propiedades.</p>
+        </div>
+        <div class="cabecera">
+            <h2>Formas de contactarme</h2>
+            <p> Mi correo es jcpelectrik@gmail.com</p>
         </div>
     </main>
     <footer>
