--- a/Electricidad.html
+++ b/Electricidad.html
@@ -1,11 +1,18 @@
-<html></html>
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>JCPELECTRIK</title>
-        <link rel="stylesheet" href="style.css">
-        <link rel="shortcut icon" href="Logos\favicon.ico" type="image/x-icon">
-        <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
-    </head>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Pagina web de JCPELECTRIK">
+    <meta name="keywords" content="Electricidad, Electronica, Fotovoltaica, Telecomunicaciones, Domotica y Programacion">
+    <meta name="author" content="JCPELECTRIK">
+    <title>JCPELECTRIK</title>
+    <link rel="stylesheet" href="style.css">
+    
+    <link rel="shortcut icon" href="Logos\favicon.ico" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
+
+</head>
     <body>
         <header>
             <img src="Logos\logo.png" alt="Logo de JCPELECTRIK">
