--- a/Fotovoltaica.html
+++ b/Fotovoltaica.html
@@ -39,6 +39,8 @@
                         <p>En esta sección encontrarás los enlaces a todos los proyectos que he realizado para que puedas acceder a ellos fácilmente.</p>
                         <p>Reglamento</p>
                         <p><a href="https://www.idae.es/publicaciones/instalaciones-de-energia-solar-fotovoltaica-pliego-de-condiciones-tecnicas-de" target="_blank">Reglamento de IDAE</a></p>
+                        <p><a href="pdf\Tema 3 fotovoltaica.pdf" target="_blank">Diseño de una instalacion fotovoltaica</a></p>
+                        <p><a href="pdf\Tema 6 fotovoltaica.pdf" target="_blank">Mantenimiento de una instalacion fotovoltaica</a></p>
                         <p>Tiendas</p>
                         <p><a href="" target="_blank"></a></p>
                         <p>Proyectos</p>
