nada interesante cambio de id

--- a/Electronica.html
+++ b/Electronica.html
@@ -45,9 +45,9 @@
                     <p>Tiendas</p>
                     <p><a href="https://www.alldatasheet.es/" target="_blank">Tienda de Componentes</a></p>
                     <p>Proyectos</p>
-                    <p><a href="#Proyecto campo">Proyecto Campo</a></p>
+                    <p><a href="#Proyecto-campo">Proyecto Campo</a></p>
                 </div>
-                <div class="columnastipo" id="Proyecto campo">
+                <div class="columnastipo" id="Proyecto-campo">
                     <h3>Proyecto Campo</h3>
                     <p>Este proyecto trata de controlar mediante varios ESP32-S3 un campo, chalet o lago. Conseguimos domotizar su terreno según sus necesidades.</p>
                     <p><a href="https://github.com/jcpelectrik/Proyecto-Campo" target="_blank">Codigo base</a></p>
