prueva de email

--- a/index.html
+++ b/index.html
@@ -40,7 +40,14 @@
         </div>
         <div class="cabecera">
             <h2>Formas de contactarme</h2>
-            <p> Mi correo es jcpelectrik@gmail.com</p>
+            <p> Mi correo es jcpelectrik@gmail.com</p>      
+        </div>
+        <div class="cabecera">
+            <h2>Suscríbete a nuestro boletín</h2>
+            <form id="emailForm">
+                <input type="email" id="emailInput" required placeholder="Tu correo electrónico">
+                <button type="submit">Suscribirse</button>
+            </form>
         </div>
     </main>
     <footer>
