nueva documentacion de electricidad y conectores f

--- a/Telecomunicaciones.html
+++ b/Telecomunicaciones.html
@@ -66,7 +66,11 @@
             </div>
             <div class="proyecto">
                 <img src="fotos\ethcable568b.gif" alt="Cocigo de colores RJ45">
-                <h3>Cocigo de colores RJ45</h3>
+                <h3> Cocigo de colores RJ45 </h3>
+            </div>
+            <div class="proyecto">
+                <img src="fotos\conector f.jpg" alt="Pasos de como hacer un conector f">
+                <h3>Conector f</h3>
             </div>
         </div>
         </main>
