--- a/Electricidad.html
+++ b/Electricidad.html
@@ -46,6 +46,11 @@
                     <p><a href="https://www.se.com/ww/en/" target="_blank">SCHNEIDER</a></p>
                     <p>Proyectos</p>
                     <p><li><a href="#El motor mas pequeño del mundo">El motor mas pequeño del mundo</a></li></p>
+                    <p>Documentacion</p>
+                    <p><a href="pdf\ct prefabricado UF.pdf" target="_blank">Centros de traformacion prefabricados de Unionfenosa</a></p>
+                    <p><a href="pdf\CTI UF.pdf" target="_blank">Centros de traformacion Interperie</a></p>
+                    <p><a href="pdf\LAMT hasta 20 kV.pdf" target="_blank">Lineas de alta tension</a></p>
+                    <p><a href="pdf\celdas AT.pdf" target="_blank">Documentacion de Celdas de alta tension</a></p>
                 </div>
                 <div class="columnastipo">
                     <h3>Reglmento REBT</h3>
