Telecomunicaciones conector CEI

--- a/Telecomunicaciones.html
+++ b/Telecomunicaciones.html
@@ -72,6 +72,10 @@
                 <img src="fotos\conector f.jpg" alt="Pasos de como hacer un conector f">
                 <h3>Conector f</h3>
             </div>
+            <div class="proyecto">
+                <img src="fotos\Conector CEI.jpeg" alt="Pasos de como hacer un conector CEI">
+                <h3>Conector CEI</h3>
+            </div>
         </div>
         </main>
         <footer>
