video medidor de campo

--- a/Telecomunicaciones.html
+++ b/Telecomunicaciones.html
@@ -76,6 +76,19 @@
                 <img src="fotos\Conector CEI.jpeg" alt="Pasos de como hacer un conector CEI">
                 <h3>Conector CEI</h3>
             </div>
+            <div class="cabecera" id="videos proyectos">
+                <h2>Videos</h2>
+                <p>En esta sección encontrarás todos los videos de complementacion de la documentacion</p>
+                <div class="columnas">
+                        <div class="proyecto" id="proyecto motor">
+                            <video controls>
+                                <source src="videos\Funcionamiento del medidor de campo PRODIG 5 _  _ UPV - Universitat Politècnica de València - UPV (480p, h264, youtube).mp4" type="video/mp4">
+                                Tu navegador no soporta la reproducción de videos.
+                            </video>
+                            <h3>Como usar el medidor de campo</h3>
+                            <p></p>
+                        </div>
+                </div> 
         </div>
         </main>
         <footer>
