Restructura de sintasis, añadir cv, añadir ejercicios logo

--- a/Domotica.html
+++ b/Domotica.html
@@ -102,6 +102,11 @@
                 </div>
                 <div class="columnastipo">
                     <h3>Proyectos LOGO</h3>
+                    <p>Ejercicios Sin Resolver</p>
+                    <p><a href="pdf\0.- Ejercicios con automatas_V2_2.pdf" target="_blank">Ejercicios</a></p>
+                    <p>Ejercicios Resueltos</p>
+                    <p><a href="pdf\Ejercicio1_merged.pdf" target="_blank">Ejercicios Basicos</a></p>
+                    <p><a href="" target="_blank">Ejercicios Temporizadores</a></p>
                 </div>
                 <div class="columnastipo">
                     <h3>Proyectos S7-1200</h3>
