--- a/Electricidad.html
+++ b/Electricidad.html
@@ -84,7 +84,7 @@
                 <div class="columnastipo" id="El motor mas pequeño del mundo">
                     <h3>El motor mas pequeño del mundo</h3>
                     <p>Este proyecto consiste en dar 15 vueltas con un cable desnudo alrededor de un canutillo de 2cm de diámetro para conseguir crear la bobina de nuestro motor. Lo siguiente que hay que hacer es darle tensión a una estructura que sujete la bobina. Esta estructura también tiene que hacerse con cable desnudo. Ya solo queda darle tensión de corriente continua y acercarle un imán para que se ponga a girar.</p>
-                    <p><li><a href="#proyecto motor">proyecto motor</a></li></p>
+                    <p><li><a href="#proyecto motor">Proyecto Motor</a></li></p>
                 </div>
             </div>
             <div class="cabecera" id="videos proyectos">
