--- a/Programacion.html
+++ b/Programacion.html
@@ -38,6 +38,8 @@
                         <h3>Enlaces Programacion</h3>
                         <p>En esta sección encontrarás los enlaces a todos los proyectos que he realizado para que puedas acceder a ellos fácilmente.</p>
                         <p>Proyectos</p>
+                        <p>Documentacion</p>
+                        <p><a href="https://exercism.org/" target="_blank">Practicas de Programacion</a></p>
                     </div>
                     <div class="columnastipo">
                         <h3>Libros y cursos de programación</h3>
@@ -54,7 +56,7 @@
                         <p><a href="https://www.luisllamas.es/esp8266-esp32/" target="_blank">Esp 32</a></p>
                         <p><a href="https://www.luisllamas.es/curso-raspberry-pi/" target="_blank">Raspberry pi</a></p>
                         <p><a href="https://web.dev/learn/html" target="_blank">HTML</a></p>
-                        <p><a href="https://web.dev/learn/css?hl=es-419" target="_blank">css</a></p>
+                        <p><a href="https://web.dev/learn/css?hl=es-419" target="_blank">CSS</a></p>
                     </div>
                     <div class="columnastipo">
                         <h3>Proyectos Programacion</h3>
