--- a/index.html
+++ b/index.html
@@ -34,13 +34,18 @@
         <div class="cabecera">
             <h2>Esta es la pagina web en la que se publicaran los enlaces y documentacion de los proyectos</h2>
         </div>
-        <div class="cabecera">
-            <h2>A que me dedico</h2>
-            <p>Soy electricista y dedico mi tiempo libre a la programación de microcontroladores como Arduino y ESP32 para domotizar y automatizar mi hogar y otras propiedades.</p>
-        </div>
-        <div class="cabecera">
-            <h2>Formas de contactarme</h2>
-            <p> Mi correo es jcpelectrik@gmail.com</p>
+        <div class="columnas">
+            <div class="columnastipo">
+                <h2>A que me dedico</h2>
+                <p>Soy electricista y dedico mi tiempo libre a la programación de microcontroladores como Arduino y ESP32 para domotizar y automatizar mi hogar y otras propiedades.</p>
+            </div>
+            <div class="columnastipo">
+                <h2>Formas de contactarme</h2>
+                <p> Mi correo es jcpelectrik@gmail.com</p>
+            </div>
+            <div class="columnastipo">
+                <h2>Curriculum Vitae</h2>
+                <p><a href="pdf\CV 1.pdf" target="_blank">CV</a></p>
         </div>
     </main>
     <footer>
