Manual medidor de campo

--- a/Telecomunicaciones.html
+++ b/Telecomunicaciones.html
@@ -43,6 +43,8 @@
                     <p>Tiendas</p>
                     <p><a href="https://global.televes.com/" target="_blank">TELEVES</a></p>
                     <p>Proyectos</p>
+                    <p>Documentacion</p>
+                    <p><a href="pdf\HDRANGERlite manual de medidor dde campo.pdf" target="_blank">Manual del medidor de campo</a></p>
                 </div>
                 <div class="columnastipo">
                     <h3>Reglamento Telecomunicaciones</h3>
