nuevas paginas de electricidad

--- a/Electricidad.html
+++ b/Electricidad.html
@@ -44,6 +44,10 @@
                     <p>Tiendas</p>
                     <p><a href="https://www.chint.eu/es/" target="_blank">CHINT</a></p>
                     <p><a href="https://www.se.com/ww/en/" target="_blank">SCHNEIDER</a></p>
+                    <p><a href="https://new.abb.com/es" target="_blank">ABB</a></p>
+                    <p><a href="https://www.portalelectricidad.es/" target="_blank">HAGER</a></p>
+                    <p><a href="https://hager.com/es" target="_blank">Portal Electricidad </a></p>
+                    <p><a href="https://www.ilumitec.es/?_gl=1*axx7el*_up*MQ..&gclid=Cj0KCQjw99e4BhDiARIsAISE7P_grlN5mrYRR8WYC4bS2HoRrsZYnlKzj3PVoQm_weuZKjrSHQO14SIaAndbEALw_wcB" target="_blank">ILUMINOTEC</a></p>
                     <p>Proyectos</p>
                     <p><li><a href="#El motor mas pequeño del mundo">El motor mas pequeño del mundo</a></li></p>
                     <p>Documentacion</p>
