Tema de satelites

--- a/Telecomunicaciones.html
+++ b/Telecomunicaciones.html
@@ -45,6 +45,8 @@
                     <p>Proyectos</p>
                     <p>Documentacion</p>
                     <p><a href="pdf\HDRANGERlite manual de medidor dde campo.pdf" target="_blank">Manual del medidor de campo</a></p>
+                    <p><a href="pdf\TEMA 6.pdf" target="_blank">Antenas y lineas para recepcion de comunicaciones por satelite</a></p>
+                    <p><a href="pdf\TEMA 7.pdf" target="_blank">Procesado y distribucion de señales de radio y television por satelite</a></p>
                 </div>
                 <div class="columnastipo">
                     <h3>Reglamento Telecomunicaciones</h3>
