Tema de automatismos

--- a/Electricidad.html
+++ b/Electricidad.html
@@ -55,6 +55,18 @@
                     <p><a href="pdf\CTI UF.pdf" target="_blank">Centros de traformacion Interperie</a></p>
                     <p><a href="pdf\LAMT hasta 20 kV.pdf" target="_blank">Lineas de alta tension</a></p>
                     <p><a href="pdf\celdas AT.pdf" target="_blank">Documentacion de Celdas de alta tension</a></p>
+                    <p><a href="pdf\celdas MT.pdf" target="_blank">Documentacion de Celdas de media tension</a></p>
+                    <p><a href="pdf\celdas BT.pdf" target="_blank">Documentacion de Celdas de baja tension</a></p>
+                    <p>-Automatismos</p>
+                    <p><a href="pdf\0.- AMPLIACIÓN DE CONCEPTOS DE AUTOMATISMOS.pdf" target="_blank">Tema 0</a></p>
+                    <p><a href="pdf\0.1.- Simbología.pdf" target="_blank">Tema 0.1</a></p>
+                    <p><a href="pdf\1.- ENVOLVENTES Y CUADROS ELÉCTRICOS.pdf" target="_blank">Tema 1</a></p>
+                    <p><a href="pdf\2.- MECANIZADO DE CUADROS ELÉCTRICOS.pdf" target="_blank">Tema 2</a></p>
+                    <p><a href="pdf\3.- PROTECCIÓN DE LAS INSTALACIONES.pdf" target="_blank">Tema 3</a></p>
+                    <p><a href="pdf\4.- MOTORES ELÉCTRICOS.pdf" target="_blank">Tema 4</a></p>
+                    <p><a href="pdf\5.- AUTOMATISMOS INDUSTRIALES CABLEADOS.pdf" target="_blank">Tema 5</a></p>
+                    <p><a href="pdf\6.- ESQUEMAS Y CIRCUITOS BÁSICOS.pdf" target="_blank">Tema 6</a></p>
+                    <p><a href="pdf\7.- ARRANQUE Y VARIACIÓN DE VELOCIDAD.pdf" target="_blank">Tema 7</a></p>
                 </div>
                 <div class="columnastipo">
                     <h3>Reglmento REBT</h3>
