FALLOS CON UNOS PDF INESISTENTES Y ENLACES

--- a/Electricidad.html
+++ b/Electricidad.html
@@ -45,8 +45,8 @@
                     <p><a href="https://www.chint.eu/es/" target="_blank">CHINT</a></p>
                     <p><a href="https://www.se.com/ww/en/" target="_blank">SCHNEIDER</a></p>
                     <p><a href="https://new.abb.com/es" target="_blank">ABB</a></p>
-                    <p><a href="https://www.portalelectricidad.es/" target="_blank">HAGER</a></p>
-                    <p><a href="https://hager.com/es" target="_blank">Portal Electricidad </a></p>
+                    <p><a href="https://www.portalelectricidad.es/" target="_blank">Portal Electricidad </a></p>
+                    <p><a href="https://hager.com/es" target="_blank">HAGER</a></p>
                     <p><a href="https://www.ilumitec.es/?_gl=1*axx7el*_up*MQ..&gclid=Cj0KCQjw99e4BhDiARIsAISE7P_grlN5mrYRR8WYC4bS2HoRrsZYnlKzj3PVoQm_weuZKjrSHQO14SIaAndbEALw_wcB" target="_blank">ILUMINOTEC</a></p>
                     <p>Proyectos</p>
                     <p><li><a href="#El motor mas pequeño del mundo">El motor mas pequeño del mundo</a></li></p>
@@ -55,8 +55,8 @@
                     <p><a href="pdf\CTI UF.pdf" target="_blank">Centros de traformacion Interperie</a></p>
                     <p><a href="pdf\LAMT hasta 20 kV.pdf" target="_blank">Lineas de alta tension</a></p>
                     <p><a href="pdf\celdas AT.pdf" target="_blank">Documentacion de Celdas de alta tension</a></p>
-                    <p><a href="pdf\celdas MT.pdf" target="_blank">Documentacion de Celdas de media tension</a></p>
-                    <p><a href="pdf\celdas BT.pdf" target="_blank">Documentacion de Celdas de baja tension</a></p>
+                    <p><a href="" target="_blank"></a></p>
+                    <p><a href="" target="_blank"></a></p>
                     <p>-Automatismos</p>
                     <p><a href="pdf\0.- AMPLIACIÓN DE CONCEPTOS DE AUTOMATISMOS.pdf" target="_blank">Tema 0</a></p>
                     <p><a href="pdf\0.1.- Simbología.pdf" target="_blank">Tema 0.1</a></p>
