videos e introducion al traformador monofasico

--- a/Electricidad.html
+++ b/Electricidad.html
@@ -50,6 +50,7 @@
                     <p><a href="https://www.ilumitec.es/?_gl=1*axx7el*_up*MQ..&gclid=Cj0KCQjw99e4BhDiARIsAISE7P_grlN5mrYRR8WYC4bS2HoRrsZYnlKzj3PVoQm_weuZKjrSHQO14SIaAndbEALw_wcB" target="_blank">ILUMINOTEC</a></p>
                     <p>Proyectos</p>
                     <p><li><a href="#El motor mas pequeño del mundo">El motor mas pequeño del mundo</a></li></p>
+                    <p><li><a href="#proyecto traformador monofasico">Traformador monofasico</a></li></p>
                     <p>Documentacion</p>
                     <p><a href="pdf\ct prefabricado UF.pdf" target="_blank">Centros de traformacion prefabricados de Unionfenosa</a></p>
                     <p><a href="pdf\CTI UF.pdf" target="_blank">Centros de traformacion Interperie</a></p>
@@ -96,17 +97,24 @@
                 <div class="columnastipo">
                     <h3>Proyectos Electricidad</h3>
                     <p><li><a href="#El motor mas pequeño del mundo">El motor mas pequeño del mundo</a></li></p>
+                    <p><li><a href="#proyecto traformador monofasico">Traformador monofasico</a></li></p>
                 </div>
                 <div class="columnastipo" id="El motor mas pequeño del mundo">
                     <h3>El motor mas pequeño del mundo</h3>
                     <p>Este proyecto consiste en dar 15 vueltas con un cable desnudo alrededor de un canutillo de 2cm de diámetro para conseguir crear la bobina de nuestro motor. Lo siguiente que hay que hacer es darle tensión a una estructura que sujete la bobina. Esta estructura también tiene que hacerse con cable desnudo. Ya solo queda darle tensión de corriente continua y acercarle un imán para que se ponga a girar.</p>
                     <p><li><a href="#proyecto motor">Proyecto Motor</a></li></p>
                 </div>
+                <div class="columnastipo" id="proyecto traformador monofasico">
+                    <h3>Proyecto traformador monofasico</h3>
+                    <p>En este proyecto se va a realizar un traformador monofasico de 220v a unas tensiones de salida de 6v, 12v y 24v para esto se an tenido que hacer una serie de calñculos que seran proporcionados junto al total de las especificaciones del traformador que sera en un pdf con los calculos resueltos</p>
+                    <p><a href="" target="_blank">Proyecto trformador monofasico calculos resueltos</a></p>
+                    <p><li><a href="#proyecto traformador monofasico video">Proyecto trformador monofasico</a></li></p>
+                </div>
             </div>
             <div class="cabecera" id="videos proyectos">
                 <h2>Videos proyectos</h2>
                 <p>En esta sección encontrarás todos los videos de los proyectos</p>
-                <div class="columnas">
+                 <div class="columnas">
                         <div class="proyecto" id="proyecto motor">
                             <video controls>
                                 <source src="videos\WhatsApp Video 2024-09-26 at 11.06.34.mp4" type="video/mp4">
@@ -115,7 +123,48 @@
                             <h3>El motor mas pequeño del mundo</h3>
                             <p></p>
                         </div>
-                </div> 
+                        <div class="proyecto">
+                            <video controls>
+                                <source src="videos\Tipos de celdas de MT.mp4" type="video/mp4">
+                                Tu navegador no soporta la reproducción de videos.
+                            </video>
+                            <h3>Tipos de celdas de MT</h3>
+                            <p></p>
+                        </div>
+                        <div class="proyecto">
+                            <video controls>
+                                <source src="videos\Instalación Centro de Transformación.mp4" type="video/mp4">
+                                Tu navegador no soporta la reproducción de videos.
+                            </video>
+                            <h3>Instalación Centro de Transformación Prefavricado</h3>
+                            <p></p>
+                        </div>
+                        <div class="proyecto">
+                            <video controls>
+                                <source src="videos\✅SECCIONADORES DE MEDIA TENSION👈.mp4" type="video/mp4">
+                                Tu navegador no soporta la reproducción de videos.
+                            </video>
+                            <h3>SECCIONADORES DE MEDIA TENSION</h3>
+                            <p></p>
+                        </div>
+                        <div class="proyecto">
+                            <video controls>
+                                <source src="videos\Cambio de fusible a seccionador de alta.mp4" type="video/mp4">
+                                Tu navegador no soporta la reproducción de videos.
+                            </video>
+                            <h3>Cambio de fusible a seccionador de alta</h3>
+                            <p></p>
+                        </div>
+                        <div class="proyecto" id="proyecto traformador monofasico video">
+                            <video controls>
+                                <source src="" type="video/mp4">
+                                Tu navegador no soporta la reproducción de videos.
+                            </video>
+                            <h3></h3>
+                            <p></p>
+                        </div>
+                 </div>
+            </div> 
         </main>
         <footer>
             <p>Copyright &copy; 2023 <span>JCP ELECTRIK </span>All rights reserved.</p>
