ampliacion del apartado aque me dedico

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <div class="columnastipo">
                 <h2>A que me dedico</h2>
                 <p>Soy electricista y dedico mi tiempo libre a la programación de microcontroladores como Arduino y ESP32 para domotizar y automatizar mi hogar y otras propiedades.</p>
+                <p>Quien necesite algun sotfware de programacion que se ponga en contacto con migo para proporcionarselo</p>
             </div>
             <div class="columnastipo">
                 <h2>Formas de contactarme</h2>
