añadimos fotos con un esquema de conexion, añadimos codigos de distintos elementos

--- a/Electronica.html
+++ b/Electronica.html
@@ -30,7 +30,7 @@
             </nav>
         </header>
         <main>
-            <div class="cabecera" id="electronica">
+            <div class="cabecera">
                 <h2>Electronica</h2>
                 <p>Aqui se pondran todos los proyectos y documentacion relacionada a la Electronica</p>
             </div>
@@ -55,6 +55,87 @@
                 <div class="columnastipo">
                     <h3>Prosimo proyecto</h3>
                     <p></p>
+                </div>
+                <div class="columnastipo">
+                    <h3>Comprovacion de pines de un ESP32-S3</h3>
+                    <p>Este codigo nos ayuda a comprobar los pines de un ESP32-S3</p>
+                    <p><a href="pdf\Codigos de Arduino\cmprobador de pines del esp32.txt" target="_blank">Codigo</a></p>
+                </div>
+                <div class="columnastipo">
+                    <h3>Conesion a wifi en un ESP32-S3</h3>
+                    <p>Este codigo nos ayuda a conectarnos a una red wifi</p>
+                    <p><a href="pdf\Codigos de Arduino\conesion a wifi.txt" target="_blank">Codigo</a></p>
+                </div>
+                <div class="columnastipo">
+                    <h3>Pantalla LCD 1602 en un ESP32-S3</h3>
+                    <p>Este codigo nos ayuda a mostrar texto en una pantalla LCD 1602</p>
+                    <p><a href="pdf\Codigos de Arduino\pantalla lcd.txt" target="_blank">Codigo</a></p>
+                </div>
+                <div class="columnastipo">
+                    <h3>Protocolo de comunicacion unidirecional ESP32-NOW en un ESP32-S3</h3>
+                    <p>Este codigo nos ayuda a comunicarnos con un ESP32-S3 desde otro ESP32-S3 asta una distancia de unos 500m donde solo se admiten paquetes de datos de 250 bytes tambien aparte de informacion se pueden mandar ordenes de uno al otro</p>
+                    <p><a href="pdf\Codigos de Arduino\protocolo esp32_now unidirecional.txt" target="_blank">Codigo</a></p>
+                    <p><a href="pdf\Codigos de Arduino\Parpadeo de led mediante esp-now.txt" target="_blank">Codigo</a></p>
+                </div>
+                <div class="columnastipo">
+                    <h3>Sensor de humedad y temperatura DHT 11 y 22 en un ESP32-S3</h3>
+                    <p>Este codigo nos ayuda a leer la temperatura y humedad de un sensor DHT 11 o 22</p>
+                    <p><a href="pdf\Codigos de Arduino\dht11.txt" target="_blank">Codigo</a></p>
+                </div>
+                <div class="columnastipo">
+                    <h3>Sensor de gas en un ESP32-S3</h3>
+                    <p>Este codigo nos ayuda a leer la concentracion de gas que hay en una sala dependiendo del detector de gas leeremos los datos de un tipo o de otro tipo de gas ya que hay varios modelos de detectores de gas pero el codigo vale para todos</p>
+                    <p><a href="pdf\Codigos de Arduino\sensor gas.txt" target="_blank">Codigo</a></p>
+                </div>
+                <div class="columnastipo">
+                    <h3>Sensor de presencias en un ESP32-S3</h3>
+                    <p>Este codigo nos ayuda a leer la presencia de un objeto en un espacio</p>
+                    <p><a href="pdf\Codigos de Arduino\sensor presencia.txt" target="_blank">Codigo</a></p>
+                </div>
+                <div class="columnastipo">
+                    <h3>Conexion de un servo motor en un ESP32-S3</h3>
+                    <p>Este codigo nos ayuda a controlar un servo motor aunque se recomienda colocar un diodo flotante por que si no se carga la placa de pruebas</p>
+                    <p><a href="pdf\Codigos de Arduino\servo.txt" target="_blank">Codigo</a></p>
+                </div>
+                <div class="columnastipo">
+                    <h3>Conexion de RGB aleatorio en un ESP32-S3</h3>
+                    <p>Este codigo nos ayuda a controlar un led RGB aleatoriamente en los colores visibles</p>
+                    <p><a href="pdf\Codigos de Arduino\rgb random.txt" target="_blank">Codigo</a></p>
+                </div>
+                <div class="columnastipo">
+                    <h3>Sensor de humendad y temperatura AHTX en un ESP32-S3</h3>
+                    <p>Este codigo nos ayuda a leer la temperatura y humedad de un sensor AHTX que es mucho mas preciso que el dht22 o el dht11</p>
+                    <p><a href="pdf\Codigos de Arduino\sensor AHTX.txt" target="_blank">Codigo</a></p>
+                </div>
+            </div>
+            <div class="cabecera">
+                <h2> Fotos de Proyectos</h2>
+                <p>Aqui se encuentran todas las fotos de los proyectos</p>
+                <div class="columnas">
+                    <div class="proyecto">
+                        <img src="fotos\conesion lcd.png" alt="Conesion con un lcd 1602 con modulo I2C">
+                        <h3>Conesion con un lcd 1602 con modulo I2C</h3>
+                    </div>
+                    <div class="proyecto">
+                        <img src="fotos\esquema sensor DHT22.png" alt="Esquema sensor DHT22 y del DHT11">
+                        <h3>Esquema sensor DHT22 y del DHT11</h3>
+                    </div>
+                    <div class="proyecto">
+                        <img src="" alt="">
+                        <h3></h3>
+                    </div>
+                    <div class="proyecto">
+                        <img src="" alt="">
+                        <h3></h3>
+                    </div>
+                    <div class="proyecto">
+                        <img src="" alt="">
+                        <h3></h3>
+                    </div>
+                    <div class="proyecto">
+                        <img src="" alt="">
+                        <h3></h3>
+                    </div>
                 </div>
             </div>
         </main>
