--- a/Domotica.html
+++ b/Domotica.html
@@ -106,7 +106,7 @@
                     <p><a href="pdf\0.- Ejercicios con automatas_V2_2.pdf" target="_blank">Ejercicios</a></p>
                     <p>Ejercicios Resueltos</p>
                     <p><a href="pdf\Ejercicio1_merged.pdf" target="_blank">Ejercicios Basicos</a></p>
-                    <p><a href="" target="_blank">Ejercicios Temporizadores</a></p>
+                    <p><a href="pdf\ejercicio 1_merged.pdf" target="_blank">Ejercicios Temporizadores</a></p>
                 </div>
                 <div class="columnastipo">
                     <h3>Proyectos S7-1200</h3>
