añadir numero de telefono

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             <div class="columnastipo">
                 <h2>Formas de contactarme</h2>
                 <p> Mi correo es jcpelectrik@gmail.com</p>
+                <p>Mi telefono es 688 70 05 38</p>
             </div>
             <div class="columnastipo">
                 <h2>Curriculum Vitae</h2>
