targeta de visita

--- a/index.html
+++ b/index.html
@@ -47,7 +47,12 @@
             </div>
             <div class="columnastipo">
                 <h2>Curriculum Vitae</h2>
+                <p>Si quieres saber mas de mi, puedes ver mi CV</p>
                 <p><a href="pdf\CV 1.pdf" target="_blank">CV</a></p>
+        </div>
+        <div class="proyecto">
+            <img src="fotos\targeta de visitas.png" alt="targeta de visita">
+            <h3>targeta de visita</h3>
         </div>
     </main>
     <footer>
