--- a/Domotica.html
+++ b/Domotica.html
@@ -24,7 +24,7 @@
                     <li><a href="Electricidad.html">Electricidad</a></li>
                     <li><a href="Telecomunicaciones.html">Telecomunicaciones</a></li>
                     <li><a href="Fotovoltaica.html">Fotovoltaica</a></li>
-                    <li><a href="Programacion.html">Programación</a></li>
+                    <li><a href="Informatica.html">Programación</a></li>
                 </ul>
             </nav>
         </header>
