--- a/Electronica.html
+++ b/Electronica.html
@@ -23,7 +23,7 @@
                     <li><a href="Electricidad.html">Electricidad</a></li>
                     <li><a href="Telecomunicaciones.html">Telecomunicaciones</a></li>
                     <li><a href="Fotovoltaica.html">Fotovoltaica</a></li>
-                    <li><a href="Programacion.html">Programación</a></li>
+                    <li><a href="Informatica.html">Programación</a></li>
                     <li><a href="Domotica.html">Domótica</a></li>
 
                 </ul>
