--- a/Informatica.html
+++ b/Informatica.html
@@ -30,14 +30,16 @@
         </header>
         <main>
             <div class="cabecera">
-                <h2>Programacion</h2>
-                <p>Aqui se pondran todos los proyectos y documentacion relacionada a la Programacion</p>
+                <h2>Programacion e Informatica</h2>
+                <p>Aqui se pondran todos los proyectos y documentacion relacionada a la Programacion e Informatica</p>
             </div>
                 <div class="columnas">
                     <div class="columnastipo">
-                        <h3>Enlaces Programacion</h3>
+                        <h3>Enlaces Programacion e Informatica</h3>
                         <p>En esta sección encontrarás los enlaces a todos los proyectos que he realizado para que puedas acceder a ellos fácilmente.</p>
                         <p>Proyectos</p>
+                        <p>Tiendas</p>
+                        <p><a href="https://www.3go.es/es/" target="_blank">3GO</a></p>
                         <p>Documentacion</p>
                         <p><a href="https://exercism.org/" target="_blank">Practicas de Programacion</a></p>
                     </div>
