añadido pc componentes

--- a/Informatica.html
+++ b/Informatica.html
@@ -40,6 +40,7 @@
                         <p>Proyectos</p>
                         <p>Tiendas</p>
                         <p><a href="https://www.3go.es/es/" target="_blank">3GO</a></p>
+                        <p><a href="https://www.pccomponentes.com/" target="_blank">PCcomponentes</a></p>
                         <p>Documentacion</p>
                         <p><a href="https://exercism.org/" target="_blank">Practicas de Programacion</a></p>
                     </div>
